# oura_ring_reverse

./: .gitignore  PYTHON_IMPLEMENTATION_PLAN.md  README.md  TRANSFER_GUIDE.md  bonded_device.txt  docker-compose.yml  pyproject.toml  ring_events.txt
native_parser/: .dockerignore  Dockerfile  ECOREWRAPPER_FULL_ANALYSIS.md  Makefile  PLAN_full_protobuf_extraction.md  README.md  analyze_sleep.py  bionic_libc_stub.c  bionic_stub.c  complete.proto  complete_final.proto  complete_final_pb2.py  complete_v2.proto  complete_v3.proto  daily_outputs_bridge.c  daily_sleep_bridge  daily_sleep_bridge.c  daytime_hr_bridge  daytime_hr_bridge.c  decode_ringdata.py  docker-compose.yml  ibi_callback.c  ibi_callback.cpp  ibi_correction_bridge  ibi_correction_bridge.c  ibi_correction_bridge_android  ibi_correction_bridge_v10  ibi_correction_bridge_v10.c  ibi_correction_bridge_v7  ibi_correction_bridge_v7.c  ibi_correction_bridge_v7_android  ibi_correction_bridge_v8  ibi_correction_bridge_v8.c  ibi_correction_bridge_v9  ibi_correction_bridge_v9.c  libc_stub.c  nightly_temp_bridge_v2  nightly_temp_bridge_v2.c  nightly_temperature_bridge  nightly_temperature_bridge.c  (+46 more)
native_parser/_archive/: ml_sleep_staging_old.py  sleep_staging_rulebased.py
native_parser/_archive/bridges_experimental/: sleep_full_bridge  sleep_full_bridge.c  test_full_bridge.py  test_raw_bridge.py  test_synthetic_bridge.py
native_parser/_archive/legacy_analysis/: analyze_overnight_sleep.py  decode_sleep_period_info.py  verify_events.py
native_parser/_archive/legacy_protos/: decoded_schema.proto  decoded_v2.proto  decoded_v3.proto  decoded_v3_pb2.py
native_parser/android_root/lib/: ld-linux-aarch64.so.1
native_parser/decrypted_models/: awhr_imputation_1_1_0.pt  awhr_profile_selector_0_0_1.pt  cumulative_stress_0_1_1.pt  cva_1_2_2.pt  cva_calibrator_1_2_3.pt  daily_medians_1_0_2.pt  daily_short_term_baselines_1_0_1.pt  decrypt_all.py  dhrv_imputation_1_0_3.pt  energy_expenditure_0_0_10.pt  halite_1_1_0.pt  illness_detection_0_4_1.pt  insomnia_0_1_4.pt  meal_timing_0_0_5.pt  popsicle_1_5_4.pt  pregnancy_biometrics_0_4_0.pt  sleepnet_bdi_0_2_2.pt  sleepstaging_2_5_3.pt  sleepstaging_2_6_0.pt  step_counter_1_2_0.pt  steps_motion_decoder_1_0_0.pt  stress_daytime_sensing_1_0_4.pt  stress_resilience_2_1_4.pt  whr_2_6_0.pt  whr_3_1_2.pt
native_parser/docs/: BRIDGE_DEVELOPMENT.md  FINAL_SUMMARY.md  PROTOBUF_DATA_SPECIFICATION.md  SLEEPNET_INPUT_COMPLETE_SPEC.md  SLEEP_SCORE_BRIDGE.md  STATUS.md  docker_assessment.md  native_sleep_score.md  parser_data_loss_analysis.md
native_parser/examples/: example_daytime_hr.py  example_ibi_correction.py  example_sleep_score.py
native_parser/extract_proto/: __init__.py  binary_validator.py  main.py  pattern_extractor.py  proto_generator.py  tree_sitter_parser.py  type_resolver.py
native_parser/libs/: libc.so.6
native_parser/ml_inference/: __init__.py  custom_ops.py  model_loader.py  sleepnet.py
native_parser/oura/: __init__.py  analyzer.py
native_parser/oura/analysis/: __init__.py  hrv.py  scores.py  sleep.py
native_parser/oura/ble/: __init__.py  bonding.py  cli.py  client.py  protocol.py
native_parser/oura/dashboard/: __init__.py  api.py
native_parser/oura/data/: __init__.py  events_parser.py  models.py  preprocess.py  reader.py  timesync.py
native_parser/oura/native/: __init__.py  app_event.py  parser.py
native_parser/webapp/: start.sh
native_parser/webapp/backend/: ble_handler.py  main.py  requirements.txt
native_parser/webapp/frontend/: package-lock.json  package.json  vite.config.ts
(+216 files in other folders)
