[project]
name = "oura-ring-parser"
version = "0.1.0"
description = "Oura Ring Gen 3 reverse engineering - native parser, ML inference, and BLE client"
requires-python = ">=3.11"
license = { text = "MIT" }

# Core dependencies (always needed)
dependencies = [
    "protobuf>=4.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# BLE client - run on host with Bluetooth hardware
ble = [
    "bleak>=0.21.0",
    "pycryptodome>=3.15.0",
]

# Web backend
web = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
    "aiofiles>=23.0.0",
]

# ML inference (PyTorch CPU)
ml = [
    "torch>=2.0.0",
]

# All dependencies (for full local development)
all = [
    "oura-ring-parser[ble,web,ml]",
]

# Development tools
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
# BLE CLI entry point
oura-ble = "oura.ble.cli:cli_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["oura", "ml_inference"]

[tool.uv]
# Use CPU-only PyTorch index for smaller downloads
extra-index-url = ["https://download.pytorch.org/whl/cpu"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
